--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: #121212;
+    background: rgb(207, 207, 207);
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -28,7 +28,7 @@ body{
 .header{
     background: linear-gradient(90deg, #3acbf0 0%, #8bb0ff 100%);
     padding: 24px;
-    text-align:center ;
+    text-align:center;
     color: #FFF;
     }
     
@@ -59,7 +59,7 @@ body{
         position: absolute;
         bottom: -8px;
         left: 0;
-        /*visbility: hidden;; */
+        visibility: hidden;
     }
 
     .form button{
@@ -72,4 +72,11 @@ body{
         font-size: 16px;
         cursor: pointer;
         margin-top: 14px;
+    }
+    .form-content.error input{
+        border-color: #ff3b25
+    }
+    .form-content.error a{
+        color: #ff3b25;
+
     }
